[package]
name = "expr-decimal"
version = "0.1.0"
authors = ["Wink Saville <wink@saville.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = { version = "1.12.4", features = ["serde-arbitrary-precision"] }
rust_decimal_macros = "1.12.4"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
